sidebar: fix colors for item overflow

--- a/dd.user.styl
+++ b/dd.user.styl
@@ -141,6 +141,12 @@
                 ../:hover ._pre-clip { opacity: 0.5 }
             }
         }
+
+        // * Sidebar -> Overflowing list item.
+        ._list-item.clone {
+            c: $light 0 $darker;
+            box-shadow: none;
+        }
     }
 
     // * Sidebar -> Search.
